hphp/hack/test/typecheck/is_expression/invalid_lsb_type_const.php.exp
File "invalid_lsb_type_const.php", line 9, characters 15-21:
Invalid "is" expression hint (Typing[4195])
  File "invalid_lsb_type_const.php", line 9, characters 15-21:
  The "is" operator cannot be used with a late static bound type constant, because it can hide a generic
File "invalid_lsb_type_const.php", line 10, characters 13-19:
Invalid "as" expression hint (Typing[4195])
  File "invalid_lsb_type_const.php", line 10, characters 13-19:
  The "as" operator cannot be used with a late static bound type constant, because it can hide a generic
File "invalid_lsb_type_const.php", line 14, characters 15-35:
Invalid "is" expression hint (Typing[4195])
  File "invalid_lsb_type_const.php", line 14, characters 28-34:
  The "is" operator cannot be used with a late static bound type constant, because it can hide a generic
